# device_board_xiaomi

./: README.md
sagit/: BUILD.gn  config.gni  device.gni
sagit/cfg/: fstab.sagit
sagit/firmware/: BUILD.gn
sagit/kernel/: BUILD.gn  check_patch.sh  make_kernel.mk  make_kernel.sh
sagit/kernel/config/: sagit_oh_defconfig
sagit/kernel/configs/: sagit_oh_defconfig
sagit/kernel/old_kernel/: OLD_BUILD_GN_SAVE
sagit/patches/: hdf.patch  hdf_patch.sh  kernel.patch
sagit/test/: BUILD.gn
sagit/updater/: BUILD.gn
